--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.html">
     <link rel="stylesheet" type="text/css" href="lancamento.html">
     <link rel="stylesheet" type="text/css" href="produto.html">
-	<link rel="stylesheet" type="text/css" href="html/css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
     <title>Login</title>
 </head>
 <style>
@@ -143,7 +143,7 @@
             </style> 
 <header>
       <div class="logo">
-        <a href="index.html"><img src="html/css/imagens/logo.png" alt="Logo ArchiStyle"></a>
+        <a href="index.html"><img src="assets/imagens/logo.png" alt="Logo ArchiStyle"></a>
       </div>
       <h1>ArchiStyle</h1>
       <div class="buttonLog">
