--- a/html/produto.html
+++ b/html/produto.html
@@ -6,7 +6,7 @@
    
     <link rel="stylesheet" type="text/css" href="index.html">
     <link rel="stylesheet" type="text/css" href="lancamento.html">
-    <link rel="stylesheet" type="text/css" href="html/css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
    
     <title>Página do Produto</title>
  
@@ -146,7 +146,7 @@
        
 <header>
             <div class="logo">
-                <img src="html/css/imagens/logo.png" alt="Logo ArchiStyle">
+                <img src="assets/imagens/logo.png" alt="Logo ArchiStyle">
             </div>
             <h1>ArchiStyle</h1>
             <div class="buttonLog">
@@ -166,7 +166,7 @@
 
         <body>
             <div class="product">
-                <img src="html/css/imagens/pexels-maksim-goncharenok-4352247.jpg" alt="Produto" width="400px"height="300px">
+                <img src="assets/imagens/pexels-maksim-goncharenok-4352247.jpg" alt="Produto" width="400px"height="300px">
                 <div class="product-details">
                     <div class="escala2">
                     <h2>Sófa Branco Camursa</h2>
@@ -220,7 +220,7 @@
     <div class="imgg">
         <div class="img-container">
     <div class="product-cart">
-        <img src="html/css/imagens/sofabranco.jpg" class="cart-img"alt="Produto"width="300" height="300">
+        <img src="assets/imagens/sofabranco.jpg" class="cart-img"alt="Produto"width="300" height="300">
         <div class="escala2">
         <h2>Sofa Branco</h2>
         <p>Descrição do Produto.</p>
@@ -229,7 +229,7 @@
   
     </div>
     <div class="product-cart">
-        <img src="html/css/imagens/sofaazul.jpg" class="cart-img"alt="Produto"width="300" height="300">
+        <img src="assets/imagens/sofaazul.jpg" class="cart-img"alt="Produto"width="300" height="300">
         <div class="escala2">
         <h2>Sofa azul</h2>
         <p>Descrição do Produto.</p>
@@ -238,7 +238,7 @@
   
     </div>
     <div class="product-cart">
-        <img src="html/css/imagens/sofá-amarelo-0.webp" class="cart-img"alt="Produto"width="300" height="300">
+        <img src="assets/imagens/sofá-amarelo-0.webp" class="cart-img"alt="Produto"width="300" height="300">
         <div class="escala2">
         <h2>Sofa amarelo</h2>
         <p>Descrição do Produto.</p>
@@ -246,7 +246,7 @@
         <button class="buy-button">Adicionar ao Carrinho</button>
     </div>
     <div class="product-cart">
-        <img src="html/css/imagens/sofavermelho.webp" class="cart-img"alt="Produto"width="300" height="300">
+        <img src="assets/imagens/sofavermelho.webp" class="cart-img"alt="Produto"width="300" height="300">
         <div class="escala2">
         <h2>Sofa vermelho</h2>
         <p>Descrição do Produto.</p>
@@ -259,7 +259,7 @@
 <div class="imgg">
     <div class="img-container">
 <div class="product-cart">
-    <img src="html/css/imagens/mesademadeira.jpg" class="cart-img"alt="Produto" width="300" height="300">
+    <img src="assets/imagens/mesademadeira.jpg" class="cart-img"alt="Produto" width="300" height="300">
     <div class="escala2">
     <h2>Mesa de Madeira</h2>
     <p>Descrição do Produto.</p>
@@ -267,7 +267,7 @@
     <button class="buy-button">Adicionar ao Carrinho</button>
 </div>
 <div class="product-cart">
-    <img src="html/css/imagens/cadeiramadeira.jpg" class="cart-img"alt="Produto" width="300" height="300">
+    <img src="assets/imagens/cadeiramadeira.jpg" class="cart-img"alt="Produto" width="300" height="300">
     <div class="escala2">
     <h2>Cadeira de madeira</h2>
     <p>Descrição do Produto.</p>
@@ -275,7 +275,7 @@
     <button class="buy-button">Adicionar ao Carrinho</button>
 </div>
 <div class="product-cart">
-    <img src="html/css/imagens/enfeite.jpg" class="cart-img"alt="Produto"width="300" height="300">
+    <img src="assets/imagens/enfeite.jpg" class="cart-img"alt="Produto"width="300" height="300">
     <div class="escala2">
     <h2>Enfeite de mesa</h2>
     <p>Descrição do Produto.</p>
@@ -283,7 +283,7 @@
     <button class="buy-button">Adicionar ao Carrinho</button>
 </div>
 <div class="product-cart">
-    <img src="html/css/imagens/manta.jpg" class="cart-img"alt="Produto"width="300" height="300">
+    <img src="assets/imagens/manta.jpg" class="cart-img"alt="Produto"width="300" height="300">
     <div class="escala2">
     <h2>Manta de coberta</h2>
     <p>Descrição do Produto.</p>
@@ -300,7 +300,7 @@
 <footer>
     <div class="footer">
       <div class="footer-logo">
-        <img src="html/css/imagens/logo.png" alt="Logo">
+        <img src="assets/imagens/logo.png" alt="Logo">
         
       </div>
     <div class="footer-column">
